Inserted clientside JS code

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Product Design Game</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"/>
     <link rel="stylesheet" href="/css/style.css" >
 </head>
@@ -13,16 +13,14 @@
         <%- include('../partials/navbar'); %>
 
         <!-- Information about the about page -->
-        <div class="welcome-container">
-            <h1>About</h1>
-            <p>A short message from me</p>
+        <div class="topline-container">
+            <h1>About Product Design Game</h1>
+            <p>Version 0.1 POC of how a game can test and reinforce knowledge of Product Design principles</p>
         </div>
 
         <div class="about-container">
-            <img src="/images/about.jpg" alt="Picture of a van with a scenic landscape in the background">
-            <p>Welcome to my blog, the space where I share my thoughts, stories, and insights on a variety of topics that fascinate me, from personal reflections to wider cultural discussions. Launched in 2024, this blog aims to create a community of like-minded individuals who are looking for a mix of inspiration, entertainment, and thought-provoking content. Whether you're here for a quick read or to engage in deeper conversation, I'm glad you stopped by. Join me on this journey of exploration and let's discover the beauty and complexity of our world together.</p>
+            <p> This web app is meant to give everyone a fun way to test your knowledge of how well you learnt the principles taught in product design class. If you have just gone through the programme, it may help you revise. And if you have not yet gone through ProductUp, it may help you decide whether you need to come.</p>
             <br>
-            <a href="/">Read my blog!</a>
         </div>
 
     </main>
