--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -13,7 +13,7 @@
         <%- include('../partials/navbar'); %>
 
         <!-- Create a new post headline -->
-        <div class="welcome-container">
+        <div class="topline-container">
             <h1>Create a new post</h1>
             <h2>Write whatever comes to mind!</h2>
         </div>
