--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,10 @@
 <nav>
     <ul>
-      <li><strong>P's Blog</strong></li>
+      <li><strong>Product Design Game v0.1</strong></li>
     </ul>
     <ul>
       <li><a href="/about">ℹ About</a></li>
+      <li><a href="/topscores">Top Scores</a></li>
       <li><a href="https://techup.live" target="_blank">🔗 TechUp Live</a></li>
     </ul>
 </nav>
