--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -21,7 +21,19 @@
             <p>Space for more tutorial points here</p>
             <a onClick="resetVariables()" class="button" role="button">Start</a>
         </div>
+        <!-- Setup health display -->
+        <div class="health-display-container">
+        <!-- Linear for now, table it later -->
+                    <p>Days elapsed <span id="days-elapsed">0</span></p>
+                    <p>Problem Statement Clarity <span id="problem-statement-clarity">0</span>/100</p>
+                    <p>Customer Insight <span id="customer-insight">0</span>/100</p>
+                    <p>Team Morale <span id="team-morale">50</span>/100</p>
+                    <p>Business Owner Confidence <span id="business-owner-confidence">50</span>/100</p>
+                    <p>Product Readiness <span id="customer-insight">None</span></p>
 
+
+
+        </div>
         <!-- Setup 20 button options -->
         <!-- Setup series of descending days dialogues for filling -->
 
