--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,15 @@
 }
 
 .health-display-container {
-    max-width: 800px;
-
+    text-align: center
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.statusdisplay{
+    text-align: center
 }
 
 .new-post-btn-container{
