--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -23,14 +23,22 @@
         </div>
         <!-- Setup health display -->
         <div class="health-display-container">
-        <!-- Linear for now, table it later -->
-                    <p>Days elapsed <span id="days-elapsed">0</span></p>
-                    <p>Problem Statement Clarity <span id="problem-statement-clarity">0</span>/100</p>
-                    <p>Customer Insight <span id="customer-insight">0</span>/100</p>
-                    <p>Team Morale <span id="team-morale">50</span>/100</p>
-                    <p>Business Owner Confidence <span id="business-owner-confidence">50</span>/100</p>
-                    <p>Product Readiness <span id="customer-insight">None</span></p>
-
+        <!-- TODO: Too add icons and beautify -->
+        <Table>
+        <Tr>
+            <TD colspan=2 class="statusdisplay"> <H4>Deadline</H4> </TD>
+            <TD colspan=2 class="statusdisplay"> <H4>Clarity</H4> </TD>
+            <TD colspan=2 class="statusdisplay"> <H4>Confidence</H4> </TD>
+        </Tr>
+        <Tr>
+            <TD class="statusdisplay"> Days elapsed <span id="days-elapsed">0</span> </TD>
+            <TD class="statusdisplay"> Product Readiness <span id="product-readiness">None</span> </TD>
+            <TD class="statusdisplay"> Problem Statement Clarity <span id="problem-statement-clarity">0</span>/100 </TD>
+            <TD class="statusdisplay"> Customer Insight <span id="customer-insight">0</span>/100 </TD>
+            <TD class="statusdisplay"> Team Morale <span id="team-morale">50</span>/100</TD>
+            <TD class="statusdisplay"> Business Owner Confidence <span id="business-owner-confidence">50</span>/100</TD>
+        </Tr>
+        </Table>
 
 
         </div>
