--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,19 @@
     text-align: center
 }
 
+.process-menu-container {
+    text-align: center
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.event-container{
+    text-align: center
+}
+
+
 .new-post-btn-container{
     text-align: center;
 
