mid point, go home

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -75,7 +75,7 @@
             </TR>
             <TR>
                 <TD><a onClick="interviewPolicyOwner()" class="button" role="button" id="policyownerButton">Interview policy owner</a></TD>
-                <TD>Interview ground-facing division</TD>
+                <TD><a onClick="interviewGroundDivision()" class="button" role="button" id="grounddivisionButton">Interview ground division</a></TD>
                 <TD>Conduct FGDs with Customers</TD>
                 <TD>(TBD)</TD>
             </TR>
