--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -80,7 +80,7 @@
                 <TD>(TBD)</TD>
             </TR>
             <TR>
-                <TD>Observe customers in natural environment</TD>
+                <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment</a></TD>
                 <TD>Hypothesise solution</TD>
                 <TD>Identify critical assumption to test</TD>
                 <TD>Consolidate findings</TD>
