3rd button done

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -86,7 +86,7 @@
                 <TD>Consolidate findings</TD>
             </TR>
             <TR>
-                <TD>Write Problem Statement</TD>
+                <TD><a onClick="writeProblemStatement()" class="button" role="button" id="writepsButton">Write Problem Statement</a></TD>
                 <TD>Write Interview/Test Guide</TD>
                 <TD>(TBD)</TD>
                 <TD>(TBD)</TD>
