4th button done

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -74,19 +74,19 @@
                 <TD>Build MVP web app</TD>
             </TR>
             <TR>
-                <TD><a onClick="interviewPolicyOwner()" class="button" role="button" id="policyownerButton">Interview policy owner</a></TD>
-                <TD><a onClick="interviewGroundDivision()" class="button" role="button" id="grounddivisionButton">Interview ground division</a></TD>
+                <TD><a onClick="interviewPolicyOwner()" class="button" role="button" id="policyownerButton">Interview policy owner (1 day)</a></TD>
+                <TD><a onClick="interviewGroundDivision()" class="button" role="button" id="grounddivisionButton">Interview ground division (1 day)</a></TD>
                 <TD>Conduct FGDs with Customers</TD>
                 <TD>(TBD)</TD>
             </TR>
             <TR>
-                <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment</a></TD>
+                <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment (3 days)</a></TD>
                 <TD>Hypothesise solution</TD>
                 <TD>Identify critical assumption to test</TD>
                 <TD>Consolidate findings</TD>
             </TR>
             <TR>
-                <TD><a onClick="writeProblemStatement()" class="button" role="button" id="writepsButton">Write Problem Statement</a></TD>
+                <TD><a onClick="writeProblemStatement()" class="button" role="button" id="writepsButton">Write Problem Statement (1 day)</a></TD>
                 <TD>Write Interview/Test Guide</TD>
                 <TD>(TBD)</TD>
                 <TD>(TBD)</TD>
