Starting on 5th button

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -28,7 +28,7 @@
         <!-- Welcome information -->
         <div class="topline-container">
             <h1>Welcome to Product Design Game</h1>
-            <p>Your mission, should you choose to accept it, is to navigate a product design journey. Acting as a the product manager placed in charge of a new web app, your goal is to get the web app to the best possible start in its first 30 days. </p>
+            <p>Your mission, should you choose to accept it, is to navigate a product design journey. Acting as a the product manager placed in charge of a new web app, your goal is to get the web app to the best possible start in its first 4 weeks (or 20 working days). </p>
             <!-- TODO: Start by telling us your name -->
             <a onClick="resetVariables()" class="button" role="button" id="startButton">Start</a>
         </div>
@@ -77,19 +77,13 @@
                 <TD><a onClick="interviewPolicyOwner()" class="button" role="button" id="policyownerButton">Interview policy owner (1 day)</a></TD>
                 <TD><a onClick="interviewGroundDivision()" class="button" role="button" id="grounddivisionButton">Interview ground division (1 day)</a></TD>
                 <TD>Conduct FGDs with Customers</TD>
-                <TD>(TBD)</TD>
+                <TD>Review FGD findings</TD>
             </TR>
             <TR>
                 <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment (3 days)</a></TD>
-                <TD>Hypothesise solution</TD>
-                <TD>Identify critical assumption to test</TD>
-                <TD>Consolidate findings</TD>
-            </TR>
-            <TR>
                 <TD><a onClick="writeProblemStatement()" class="button" role="button" id="writepsButton">Write Problem Statement (1 day)</a></TD>
-                <TD>Write Interview/Test Guide</TD>
-                <TD>(TBD)</TD>
-                <TD>(TBD)</TD>
+                <TD><a onClick="identifyCriticalAssumption()" class="button" role="button" id="identifycriticalButton">Identify critical assumption to test</a></TD>
+                <TD>Write Interview Guide</TD>
             </TR>
           </table>   
         </div>
