5th button complete

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -68,7 +68,7 @@
         <H4>What do you wish to do next?</H4>
          <table>
             <TR>
-                <TD>Build paper prototype</TD>
+                <TD><a onClick="buildPaperProto()" class="button" role="button" id="buildpaperButton">Build paper prototype (1 day)</a></TD>
                 <TD>Build figma prototype</TD>
                 <TD>Build clickable prototype</TD>
                 <TD>Build MVP web app</TD>
@@ -82,7 +82,7 @@
             <TR>
                 <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment (3 days)</a></TD>
                 <TD><a onClick="writeProblemStatement()" class="button" role="button" id="writepsButton">Write Problem Statement (1 day)</a></TD>
-                <TD><a onClick="identifyCriticalAssumption()" class="button" role="button" id="identifycriticalButton">Identify critical assumption to test</a></TD>
+                <TD><a onClick="identifyCriticalAssumption()" class="button" role="button" id="identifycriticalButton">Identify critical assumption to test (1 day)</a></TD>
                 <TD>Write Interview Guide</TD>
             </TR>
           </table>   
