6th button complete

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -82,8 +82,8 @@
             <TR>
                 <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment (3 days)</a></TD>
                 <TD><a onClick="writeProblemStatement()" class="button" role="button" id="writepsButton">Write Problem Statement (1 day)</a></TD>
-                <TD><a onClick="identifyCriticalAssumption()" class="button" role="button" id="identifycriticalButton">Identify critical assumption to test (1 day)</a></TD>
-                <TD>Write Interview Guide</TD>
+                <TD><a onClick="planProtoTest()" class="button" role="button" id="plantestButton">Plan Prototype Tests (2 days)</a></TD>
+                <TD></TD>
             </TR>
           </table>   
         </div>
