7th button half-completed.

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -76,8 +76,8 @@
             <TR>
                 <TD><a onClick="interviewPolicyOwner()" class="button" role="button" id="policyownerButton">Interview policy owner (1 day)</a></TD>
                 <TD><a onClick="interviewGroundDivision()" class="button" role="button" id="grounddivisionButton">Interview ground division (1 day)</a></TD>
-                <TD>Conduct FGDs with Customers</TD>
-                <TD>Review FGD findings</TD>
+                <TD><a onClick="testProto()" class="button" role="button" id="testprotoButton">Test Prototype with Customers</a></TD>
+                <TD></TD>
             </TR>
             <TR>
                 <TD><a onClick="observeCustomers()" class="button" role="button" id="observationButton">Observe customers in natural environment (3 days)</a></TD>
